--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ a:hover {
 
 /* Individual Work Descriptions */
 .post-content {
-    padding: 7% 0 6%;
+    padding: 30px 0 25px;
     overflow: auto;
     margin: 0;
 }
