changed project-link color

--- a/css/style.css
+++ b/css/style.css
@@ -358,6 +358,10 @@ a:hover {
     text-align: center;
 }
 
+.project-link a {
+    color: black;
+}
+
 .click {
     background-color: white;
     border: 1.5px solid black;
