--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,10 @@ a:hover {
     flex-wrap: wrap;
 }
 
+.project .col-sm-6 {
+    padding: 0 20px 20px 0;
+}
+
 .project *, .gallery-item * {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
