--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,6 @@ a:hover {
 }
 
 .portfolio-section, .about-section {
-    margin-bottom: 50px;
     padding: 110px 0 0 0;
     width: 100%;
     -webkit-animation: fadein 1s;
@@ -445,31 +444,39 @@ a:hover {
     background-color: transparent;
 }
 
+@media (max-width: 414px) {
+    .description, .tags {
+        padding: 0;
+        width: 100%;
+        float: none;
+    }
+}
+
 @media (max-width: 667px) {
     h1 {
-	font-size: 2.3em;
-	}
+    font-size: 2.3em;
+    }
 }
 
 @media (max-width: 767px) {
     .navbar-nav a {
-	font-size: 2em;
+    font-size: 2em;
     }
     .underline::after {
-	content: none;
-	display: none;
+    content: none;
+    display: none;
     }
     .social-media-bar {
-	float: none;
-	text-align: center;
+    float: none;
+    text-align: center;
     }
     .social-media-bar a {
-	padding: 0px 15px;
+    padding: 0px 15px;
     }
 }
 
 @media (min-width: 768px) {
     .navbar-nav > li > a {
-	padding: 0;
+    padding: 0;
     }
 }
