--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ a:hover {
 /* Portfolio */
 .intro {
     text-align: center;
-    padding: 0px 0px 50px 0px;
+    padding-bottom: 30px;
 }
 
 .portfolio-section, .about-section {
@@ -509,4 +509,27 @@ a:hover {
     .click {
         padding: 10px 9px;
     }
+}
+
+.tag-list {
+    display: flex;
+    align-items: center;
+}
+
+.index-tag {
+    margin: 0px 10px 20px 0;
+    padding: 2px 15px;
+    /*border: 1px solid black;*/
+    border-radius: 20px;
+}
+
+.index-tag:hover, .active {
+    background-color: #f4f4f5;
+    cursor: pointer;
+}
+
+.index-tag h6 {
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    font-size: 13px;
 }
