--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ a:hover {
 .description {
     float: left;
     padding: 0 10pt 0pt 0;
-    width: 70%;
+    /*width: 70%;*/
 }
 
 .tags {
@@ -532,4 +532,16 @@ a:hover {
     letter-spacing: 1.5px;
     text-transform: uppercase;
     font-size: 13px;
+}
+
+.project-tag {
+    width: 100%;
+}
+
+.project-tag .index-tag {
+    margin: 30px 10px 0px 0px;
+}
+
+.project-tag .tag-list {
+    justify-content: center;
 }
