--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,11 @@
-@keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-body, html {
-    font-family: "Open Sans";
-    height: 100%;
-    width: 100%;
-    top: 0;
-}
-
-.container {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0em 10%;
-    width: 100%;
-}
-
-p, li {
-    font-size: 15px;
-    /*font-weight: 100;*/
-    letter-spacing: 0.8px;
-    line-height: 170%;
+html, body {
+    font-family: "Open Sans", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 	  
 h1 {
-    font-size: 2.5em;
+    font-size: 35px;
     font-weight: 100;
 }
 
@@ -58,12 +14,27 @@ h2 {
     font-weight: 100;
 }
 
+h3 {
+    font-size: 24px;
+}
+
+h4 {
+    font-size: 18px;
+}
+
 h5 {
+    font-size: 14px;
     letter-spacing: 0.8px;
 }
 
-a:hover {
-    color: #5CADDC;
+p, li {
+    font-size: 15px;
+    letter-spacing: 0.8px;
+    line-height: 170%;
+}
+
+a, a:hover, a:focus, a:active {
+    color: inherit;
     text-decoration: none;
 }
 
@@ -72,151 +43,74 @@ code {
     background-color: #f2f4f9;
 }
 
+.container-fluid {
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
 /* Navigation Bar */
-.navbar-custom {
-    transition: 500ms ease;
-    background: white;
+.fixed-top {
+    padding: 2em 10% 1em 10%;
 }
 
-.navbar-fixed-top .navbar-collapse {
-    max-height: none;
-    height: 100vh;
-    -webkit-animation: fadein 1s;
-    -moz-animation: fadein 1s;
-    -ms-animation: fadein 1s;
-    -o-animation: fadein 1s;
-    animation: fadein 1s;
-}
-
-.navbar-custom {
-    margin-bottom: 0;
-}
-
-.navbar-custom .navbar-toggle {
-    color: black; 
-    font-size: 1.2em;   
-}
-
-.navbar-custom .nav li a:active,
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li a:hover {
-    background: transparent;
-    outline: 0;
-}
-
-.navbar-custom .navbar-toggle:active,
-.navbar-custom .navbar-toggle:focus {
-    outline: 0;
-}
-
-.navbar-custom .navbar-brand {
+.navbar-brand {
     font-size: 25px;
     font-weight: 700;
     letter-spacing: 1px;
-    padding: 15px 0px;
 }
 
-.navbar-custom .navbar-brand:focus {
-    outline: 0;
-}
-
-.navbar-custom a {
-    color: black;
-    font-size: 1em;
-    text-align: center;
-}
-
-.navbar-custom .nav li a {
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-
-.navbar-custom .nav li.active {
-    outline: 0;
-}
-
-.navbar-custom .nav li.active a:hover {
-    color: #fff;
-}
-
-.navbar-fixed-bottom, .navbar-fixed-top {
-    position: fixed;
-}
-
-.navbar-fixed-top {
-    padding: 2em 10% 1em 10%;
-}
-  
-.navbar a {
-    font-size: 15px;
-    font-weight: 500;
-    letter-spacing: 1px;
-}
-
-.navbar-nav > li > a {
+.navbar-light .navbar-nav .nav-link,
+.navbar-light .navbar-nav .nav-link:hover {
     padding: 0;
+    margin-right: 0;
+    margin-left: 30px;
+    color: black;
+    letter-spacing: 0.5px;
 }
 
-.nav > li > a {
-    margin: 18px 15px;
-}
-
-.navbar-custom.scrolled {
-    background: #000;
-}
-
-/* Navigation Toggle for Mobile */
-.collapsing {
-    -webkit-transition: height 0.01s;
-    -moz-transition: height 0.01s;
-    -ms-transition: height 0.01s;
-    -o-transition: height 0.01s;
-    transition: height 0.01s;
-}
-
-.navbar-toggle {
+/* .navbar-toggler {
     background: transparent !important;
     border: none;
     margin-right: 0px;
     padding-right: 0;
 }
 
-.navbar-toggle:hover {
+.navbar-toggler:hover {
     background: transparent !important;
 }
 
-.navbar-toggle .icon-bar {
+
+.navbar-toggler .icon-bar {
     background-color: black;
     width: 22px;
     transition: all 0.2s;  
 }
 
-.navbar-toggle .top-bar {
+.navbar-toggler .top-bar {
     transform: rotate(45deg);
     transform-origin: 10% 10%;
 }
 
-.navbar-toggle .middle-bar {
+.navbar-toggler .middle-bar {
     opacity: 0;
 }
 
-.navbar-toggle .bottom-bar {
+.navbar-toggler .bottom-bar {
     transform: rotate(-45deg);
     transform-origin: 10% 90%;
 }
 
-.navbar-toggle.collapsed .top-bar {
+.navbar-toggler .collapsed .top-bar {
     transform: rotate(0);
 }
 
-.navbar-toggle.collapsed .middle-bar {
+.navbar-toggler .collapsed .middle-bar {
     opacity: 1;
 }
 
-.navbar-toggle.collapsed .bottom-bar {
+.navbar-toggler .collapsed .bottom-bar {
     transform: rotate(0);
-}
+} */
 
 .underline {
     color: #000;
@@ -238,63 +132,70 @@ code {
     transition: width .3s;
 }
 
-.tag-list {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+/*Splash*/
+.section-container {
+    margin: 0 10%;
 }
 
-/*Splash*/
 .inner-container {
-    width: 100%;
+    position: relative;
     height: 100vh;
     display: flex;
     align-items: center;
 }
 
-.splash .basic-info {
+/* .splash {
+    font-family: "Work Sans", sans-serif;
+} */
+
+.splash h1 {
+    line-height: 49px;
+    margin-top: 15px;
+    margin-bottom: 0;
+    font-weight: 500;
+}
+
+.splash h5 {
     font-family: "Work Sans", sans-serif;
     text-transform: uppercase;
     font-weight: 600;
     margin-top: 0;
-}
-
-.splash .sub-info {
-    font-family: "Work Sans", sans-serif;
-    line-height: 49px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
 }
 
 .down {
     position: absolute;
-    right: 0;
-    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     bottom: 20px;
-    text-align: center;
     font-size: 30px;
 }
 
-.splash a {
-    color: black;
+/*Tags*/
+.tag-list {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-/*Tags*/
 .index-tag {
-    margin: 0px 10px 20px 0;
-    padding: 2px 15px;
-    /*border: 1px solid black;*/
+    margin-right: 10px;
+    padding: 10px 16px;
     border-radius: 20px;
 }
 
 .index-tag:hover, .active {
     background-color: #f4f4f5;
     cursor: pointer;
+    transition: 500ms;
 }
 
 .index-tag h6 {
     letter-spacing: 1.5px;
     text-transform: uppercase;
     font-size: 13px;
+    margin: 0;
 }
 
 .project-tag {
@@ -311,13 +212,8 @@ code {
 }
 
 /* Portfolio */
-.intro {
-    text-align: center;
-    padding-bottom: 30px;
-}
-
 .portfolio-section {
-    padding: 50px 0 0 0;
+    margin-top: 50px;
 }
 
 .about-section, .project-section {
@@ -326,50 +222,35 @@ code {
 
 .portfolio-section, .about-section {
     width: 100%;
-    -webkit-animation: fadein 1s;
-    -moz-animation: fadein 2s;
-    -ms-animation: fadein 2s;
-    -o-animation: fadein 2s;
-    animation: fadein 2s;
 }
 
-.portfolio-section .col-sm-6 {
-    padding: 0 20px 20px 0;
+.portfolio-section .col-sm-6, .project-section .col-md-4 {
+    padding-right: 10px;
+    padding-left: 10px;
+    margin-bottom: 20px;
 }
 
-.row {
-    margin: 0;
-}
-
-.columns {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.project *, .gallery-item * {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: all 0.45s ease;
-    transition: all 0.45s ease;
-}
-
-.project img, .gallery-item img {
-    vertical-align: top;
-    max-width: 100%;
-    backface-visibility: hidden;
+.project {
+    position: relative;
 }
 
 .project figcaption {
     position: absolute;
-    align-items: center;
-    top: 0;
-    bottom: 20px;
-    left: 0;
-    right: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    opacity: 0;
+    transition: 0.5s;
     z-index: 1;
+}
+
+.project figcaption:hover {
+    opacity: 1;
 }
 
 .project h3,
@@ -377,37 +258,26 @@ code {
     font-weight: bold;
     letter-spacing: 1px;
     margin: 0;
-    opacity: 0;
-    text-align: center;
 }
 
 .project h5 {
-    font-size: 1.2em;
+    font-size: 16px;
     font-style: italic;
     font-weight: normal;
     padding: 5px;
     -webkit-transform: translateY(100%);
     transform: translateY(100%);
+    transition: 0.5s;
 }
 
-.project a, .gallery-item a {
-    position: absolute;
-    top: 0;
-    bottom: 20px;
-    left: 0;
-    right: 20px;
-    z-index: 1;
+.project:hover h5 {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
 }
 
 .project:hover > img {
     opacity: 0.1;
-}
-
-.project:hover h3,
-.project:hover h5 {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    opacity: 1;
+    transition: 100ms;
 }
 
 .category__image {
@@ -425,10 +295,18 @@ code {
     margin: 0;
 }
 
+.post-content a {
+    color: #337ab7;
+}
+
+.post-content a:hover {
+    color: #5CADDC;
+    text-decoration: none;
+}
+
 .description {
     float: left;
-    padding: 0 10pt 0pt 0;
-    /*width: 70%;*/
+    padding-right: 13px;
 }
 
 .description h4 {
@@ -453,28 +331,6 @@ code {
     margin: 10px;
 }
 
-.click {
-    background-color: white;
-    border: 1.5px solid black;
-    padding: 10px 15px;;
-    letter-spacing: 1px;
-    font-size: 15px;
-}
-
-.click:hover {
-    color: white;
-    background-color: black;
-    transition: 0.5s;
-}
-
-.click:focus {
-    outline: none;
-}
-
-.click i {
-    letter-spacing: 10px;
-}
-
 /*Project List*/
 .project-list {
     padding-top: 50px;
@@ -495,18 +351,37 @@ code {
     color: #337ab7;
 }
 
-.project-list .current-page {
-    color: #337ab7;
+
+.click {
+    background-color: white;
+    border: 1.5px solid black;
+    padding: 10px 15px;;
+    letter-spacing: 1px;
+    font-size: 15px;
+    transition: 0.3s;
+}
+
+.click:hover {
+    color: white;
+    background-color: black;
+    transition: 0.5s;
+}
+
+.click:focus {
+    outline: none;
+}
+
+.click i {
+    letter-spacing: 10px;
 }
 
 /* Daily UI Gallery */
 .gallery {
     margin-bottom: 30px;
-    width: calc(100% - -20px);
 }
 
-.gallery .col-sm-4 {
-    padding: 0 20px 20px 0;
+.gallery-item {
+    position: relative;
 }
 
 .gallery-item figcaption {
@@ -516,7 +391,7 @@ code {
     letter-spacing: 4px;
     background-color: rgba(255, 255, 255, .96);
     opacity: 0;
-    bottom: 30px;
+    bottom: 10px;
     left: 10px;
     margin-right: 30px;
     padding: 8px 12px;
@@ -539,24 +414,47 @@ code {
 /*Social Media Footer*/
 .social-media-bar {
     float: right;
-    padding: 30px 0px;					    	  
-    -webkit-animation: fadein 1s;
-    -moz-animation: fadein 2s;
-    -ms-animation: fadein 2s;
-    -o-animation: fadein 2s;
-    animation: fadein 2s;
+    padding: 30px 0px;
 }
 
 .social-media-bar a {
     color: #555;
     font-size: 17px;
-    padding: 0px 0px 0px 15px;
-    transition: all 0.3s ease;
+    margin-left: 15px;
 }
 
 .social-media-bar a:hover {
     color: #000;
     background-color: transparent;
+}
+
+@media (min-width: 768px) {
+    .navbar-nav > li > a {
+        padding: 0;
+    }
+}
+
+@media (max-width: 767px) {
+    .navbar-nav a {
+        font-size: 2em;
+    }
+    .underline::after {
+        content: none;
+        display: none;
+    }
+    .social-media-bar {
+        float: none;
+        text-align: center;
+    }
+    .social-media-bar a {
+        padding: 0px 15px;
+    }
+}
+
+@media (max-width: 667px) {
+    h1 {
+        font-size: 2.3em;
+    }
 }
 
 @media (max-width: 414px) {
@@ -573,37 +471,5 @@ code {
     }
     .project-tag .index-tag {
         margin: 10px 10px 0px 0px;
-    }
-}
-
-@media (max-width: 667px) {
-    h1 {
-    font-size: 2.3em;
-    }
-}
-
-@media (max-width: 767px) {
-    .navbar-nav a {
-    font-size: 2em;
-    }
-    .underline::after {
-    content: none;
-    display: none;
-    }
-    .social-media-bar {
-    float: none;
-    text-align: center;
-    }
-    .social-media-bar a {
-    padding: 0px 15px;
-    }
-    nav > li > a {
-    margin: 30px 15px;
-    }
-}
-
-@media (min-width: 768px) {
-    .navbar-nav > li > a {
-    padding: 0;
     }
 }
