--- a/css/style.css
+++ b/css/style.css
@@ -63,59 +63,25 @@ code {
 .navbar-light .navbar-nav .nav-link:hover {
     padding: 0;
     margin-right: 0;
-    margin-left: 30px;
     color: black;
     letter-spacing: 0.5px;
 }
 
-/* .navbar-toggler {
-    background: transparent !important;
-    border: none;
-    margin-right: 0px;
-    padding-right: 0;
+.navbar-light .navbar-toggler {
+    border: 0;
+    color: black;
+    padding: 0;
 }
 
-.navbar-toggler:hover {
-    background: transparent !important;
+.navbar-light .navbar-toggler:focus {
+    outline: none;
 }
-
-
-.navbar-toggler .icon-bar {
-    background-color: black;
-    width: 22px;
-    transition: all 0.2s;  
-}
-
-.navbar-toggler .top-bar {
-    transform: rotate(45deg);
-    transform-origin: 10% 10%;
-}
-
-.navbar-toggler .middle-bar {
-    opacity: 0;
-}
-
-.navbar-toggler .bottom-bar {
-    transform: rotate(-45deg);
-    transform-origin: 10% 90%;
-}
-
-.navbar-toggler .collapsed .top-bar {
-    transform: rotate(0);
-}
-
-.navbar-toggler .collapsed .middle-bar {
-    opacity: 1;
-}
-
-.navbar-toggler .collapsed .bottom-bar {
-    transform: rotate(0);
-} */
 
 .underline {
     color: #000;
     display: inline-block;
     text-decoration: none;
+    margin-left: 30px;
 }
 
 .underline::after {
@@ -440,11 +406,23 @@ code {
 } */
 
 @media (max-width: 767px) {
+    .navbar-nav {
+        height: 84vh;
+        padding-bottom: 14vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .navbar-light .navbar-nav .nav-link,
+    .navbar-light .navbar-nav .nav-link:hover {
+        margin-left: 0;
+    }
     .navbar-nav a {
-        font-size: 2em;
+        font-size: 20px;
+        margin: 5px 0;
+        text-align: center;
     }
     .underline::after {
-        content: none;
         display: none;
     }
     .social-media-bar {
