--- a/css/style.css
+++ b/css/style.css
@@ -413,14 +413,13 @@ code {
         align-items: center;
         justify-content: center;
     }
-    .navbar-light .navbar-nav .nav-link,
-    .navbar-light .navbar-nav .nav-link:hover {
-        margin-left: 0;
-    }
     .navbar-nav a {
         font-size: 20px;
         margin: 5px 0;
         text-align: center;
+    }
+    .underline {
+        margin-left: 0;
     }
     .underline::after {
         display: none;
